# Image-Processing

melnikova_m_f/: CMakeLists.txt  build.vs.2019.cmake
melnikova_m_f/prj.labs/kr/: CMakeLists.txt  kr.cpp  task.report.md.in.txt
melnikova_m_f/prj.labs/lab01/: lab01.cpp  lab01.report.md.in.txt
melnikova_m_f/prj.labs/lab02/: lab02.cpp  lab02.report.md.in.txt
melnikova_m_f/prj.labs/lab03/: lab03.cpp  lab03.report.md.in.txt
melnikova_m_f/prj.labs/lab04/: CMakeLists.txt  lab04.cpp  lab04.report.md.in.txt
